# ashot

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
crates/capture-core/: Cargo.toml
crates/capture-core/src/: lib.rs
docs/: collaboration-template.md  product-goals.md  technical-implementation.md
scripts/: ashot-dev-rebuild-reinstall.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  image.rs  lib.rs  main.rs  ocr.rs  screencapturekit.rs  screenshot.rs
src/components/: ImageEditor.tsx  RegionSelector.tsx
src/components/capture/: CaptureOverlay.tsx  SelectionToolbar.tsx  WindowPicker.tsx
src/components/editor/: AnnotationCanvas.tsx  EditorShell.tsx  EffectsPanel.tsx  PropertiesPanel.tsx
src/components/onboarding/: OnboardingFlow.tsx
src/components/preferences/: KeyboardShortcutManager.tsx  PreferencesPage.tsx
src/components/scroll/: ScrollPreviewPanel.tsx  ScrollSessionHud.tsx  (+1 more)
src/hooks/: useEditorSettings.ts  useEditorState.ts  usePreviewGenerator.ts
src/i18n/: provider.test.ts  provider.tsx  useI18n.ts
src/lib/: annotation-utils.ts  auto-process.test.ts  auto-process.ts  canvas-utils.ts  capture-errors.ts  hotkey-health.test.ts  hotkey-health.ts  permission-classifier.test.ts  permission-flow.test.ts  permission-flow.ts  scroll-session.test.ts  scroll-session.ts  shortcuts.test.ts  shortcuts.ts
src/state-machine/: capture-machine.test.ts  capture-machine.ts
src/stores/: editorStore.test.ts  editorStore.ts
(+4 files in other folders)
