[package]
name = "ashot"
version = "0.0.1"
description = "ashot App"
authors = ["kartik labhshetwar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The lib name matches the package name to allow `ashot::run()` usage
# On Windows, if there's a conflict with bin name, we can add `_lib` suffix
name = "ashot"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
capture-core = { path = "../crates/capture-core" }
base64 = "0.22"
dirs = "5"
image = "0.25"
imageproc = "0.25"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-screenshots = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
xcap = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-audio-toolbox = { version = "0.3", features = ["AudioServices"] }
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGWindow"] }
objc2-core-image = "0.3"
objc2-foundation = "0.3"
objc2-vision = { version = "0.3", features = ["VNRecognizeTextRequest", "VNObservation"] }
